--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Bantu</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
+    <body>
+        <h1>
+            Bantu 
+        </h1>
+    </body>
+</html>
