--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
+
     <link href="css/style.css" rel="stylesheet">
 
 </head>
@@ -22,85 +22,47 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
+    <nav class="navbar-inverse navbar" role="navigation">
+        <div class="section-wrapper">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Bantu</a>
+            <div class="navbar-header navbar row">
+                <div class="col-md-5 flex-center logo">
+                    <h1 class="grey-text">Bantu</h1>
+                </div>
+                <div class="col-md-8 flex-center title-text">
+                    <h5 class="grey-text">Join us in gathering small efforts for a greater purpose Reinventing charity management in Singapore</h5>
+                </div>
             </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse right" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
 
     <!-- Full Width Image Header with Logo -->
     <!-- Image backgrounds are set within the full-width-pics.css file. -->
-    <header class="image-bg-fluid-height">
-        <img class="img-responsive img-center" src="http://placehold.it/200x200&text=Logo" alt="">
+    <header class="backdrop">
+        <div class="section-wrapper row row-parent">
+            <div class="col-md-4 block bg-orange flex-center mobile">
+                <img class="mobile-image" src="img/mobile.jpg" alt="">
+            </div>
+            <div class="col-md-8 block bg-orange flex-center info">
+                <div class="info-inner">
+                    <div class="text-content">
+                        <h3 class="white-text item-margin"><b>GET INVOLVED TODAY!</b></h3>
+                        <h5 class="white-text item-margin"><b>Leave your email below & we will notify you once our amazing platform launches! ;)</b></h5>
+                        <h6 class="white-text item-margin"><b>(Shhhh, you'll get beta & priority access)</b></h6>
+                    </div>
+                    <div class="form item-margin form-content">
+                        <input class="form-control item-margin text-input" type="text" placeholder="Your email here..." id="example-text-input">
+                        <button type="button" class="btn btn-primary item-margin button">NOTIFY ME</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
-
-    <!-- Content Section -->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="section-heading">Section Heading</h1>
-                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Fixed Height Image Aside -->
-    <!-- Image backgrounds are set within the full-width-pics.css file. -->
-    <aside class="image-bg-fixed-height"></aside>
-
-    <!-- Content Section -->
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="section-heading">Section Heading</h1>
-                    <p class="lead section-lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                    <p class="section-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Bantu 2016</p>
-                </div>
-            </div>
-            <!-- /.row -->
-        </div>
+        
         <!-- /.container -->
     </footer>
 
@@ -109,6 +71,7 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
