--- a/index.html
+++ b/index.html
@@ -37,23 +37,49 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Full Width Image Header with Logo -->
-    <!-- Image backgrounds are set within the full-width-pics.css file. -->
     <header class="backdrop">
-        <div class="section-wrapper row row-parent">
+        <div class="section-wrapper bg-orange row row-parent">
             <div class="col-md-4 block bg-orange flex-center mobile">
                 <img class="mobile-image" src="img/mobile.jpg" alt="">
             </div>
-            <div class="col-md-8 block bg-orange flex-center info">
+            <div id="content-1" class="col-md-8 block bg-orange flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
                         <h3 class="white-text item-margin"><b>GET INVOLVED TODAY!</b></h3>
                         <h5 class="white-text item-margin"><b>Leave your email below & we will notify you once our amazing platform launches! ;)</b></h5>
                         <h6 class="white-text item-margin"><b>(Shhhh, you'll get beta & priority access)</b></h6>
                     </div>
-                    <div class="form item-margin form-content">
-                        <input class="form-control item-margin text-input" type="text" placeholder="Your email here..." id="example-text-input">
-                        <button type="button" class="btn btn-primary item-margin button">NOTIFY ME</button>
+                    <div id="sub-content-1" class="form item-margin form-content">
+                        <input id="email" class="form-control item-margin text-input" type="email" name="email" required placeholder="Your email here..." id="example-text-input">
+                        <button type="button" id="email-button" class="btn btn-primary item-margin button">NOTIFY ME</button>
+                    </div>
+                    <div id="sub-content-2" class="form item-margin form-content hidden">
+                        <h3 class="white-text item-margin text-right ">I am: </h3>
+                        <div class="column radio-group-row">
+                            <div class="col-md-6"> 
+                                <div class="">
+                                    <input type="radio" class="left" name="type" value="organization" checked>
+                                    <label for="organization" class="white-text item-margin radio-label">An organization with non-profit campaigns</label>
+                                </div> 
+                            </div>
+                            <div class="col-md-6">
+                                <div class="">
+                                    <input type="radio" class="left" name="type" value="volunteer">
+                                    <label for="organization" class="white-text item-margin radio-label">Someone interested in volunteering my time</label>
+                                </div>
+                            </div>
+                        </div>
+                        <button type="button" id="done-button" class="btn btn-primary item-margin button">Done</button>
+                    </div>
+                </div>
+            </div>
+            <div id="content-2" class="col-md-8 block bg-orange flex-center info hidden">
+                <div class="info-inner">
+                    <div class="text-content">
+                        <h3 class="white-text item-margin"><b>THANK YOU FOR SIGNING UP!</b></h3>
+                        <h6 class="white-text item-margin">We have added you to our mailing list :)</h6>
+                        <h3 class="white-text item-margin"><b>ban.tu</b></h3>
+                        <h6 class="white-text item-margin">will be launching very soon!</h6>
                     </div>
                 </div>
             </div>
