--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div id="sub-content-1" class="form item-margin form-content">
                         <input id="email" class="form-control item-margin text-input" type="email" name="email" required placeholder="Your email here..." id="example-text-input">
-                        <button type="button" id="email-button" class="btn btn-primary item-margin button">NOTIFY ME</button>
+                        <button type="button" id="email-button" class="btn btn-primary item-margin button" onclick="onEmailClick()">NOTIFY ME</button>
                     </div>
                     <div id="sub-content-2" class="form item-margin form-content hidden">
                         <h3 class="white-text item-margin text-right ">I am: </h3>
@@ -98,7 +98,59 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        var email="", type=""
+        $('#email-button').click(function(){
+            email = $('#email').val()
+            if(validateEmail(email)) {
+                showOptions()
+            } else {
+                alert("Please enter a valid email address")
+            }
+        })
 
+        $('#done-button').click(function(){
+            type = $('input[name="type"]:checked').val();
+            sendRequest(showFinalPage);
+        })
+
+        function showOptions() {
+            $('#sub-content-1').fadeOut( "", function() {
+                $('#sub-content-1').addClass("hidden")
+                $('#sub-content-2').fadeIn().removeClass("hidden")
+            })    
+        }
+
+        function showFinalPage() {
+            $('#content-1').fadeOut( "", function() {
+                $('#content-1').addClass("hidden")
+                $('#content-2').fadeIn().removeClass("hidden")
+            })
+        }
+
+        function validateEmail(email) {
+            var regex = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+            return regex.test(email);
+        }
+
+        function sendRequest(successCallback){
+            const apiKey = "$2y$10$kvyRe67FHwglsIhoz4oype0nsC0GKSwTycBrVniR49bSCthrCBgby"
+            const url = "http://platform.bantu.life/api/v1/addEmail?apikey=" + apiKey
+            var request = $.post( url, { email: email, option: type } , function() {
+                successCallback()
+            })
+            .done(function() {
+                
+            })
+            .fail(function() {
+                
+            })
+            .always(function() {
+
+            });
+        }
+
+    </script>
 </body>
 
 </html>
