add background img and adjust text color

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </nav>
 
     <header class="backdrop">
-        <div class="section-wrapper bg-orange row row-parent">
-            <div class="col-md-4 block bg-orange flex-center mobile">
+        <div class="section-wrapper row row-parent">
+            <div class="col-md-4 block flex-center mobile">
                 <img class="mobile-image" src="img/mobile.jpg" alt="">
             </div>
-            <div id="content-1" class="col-md-8 block bg-orange flex-center info">
+            <div id="content-1" class="col-md-8 block flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
                         <h3 class="white-text item-margin"><b>GET INVOLVED TODAY!</b></h3>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
             </div>
-            <div id="content-2" class="col-md-8 block bg-orange flex-center info hidden">
+            <div id="content-2" class="col-md-8 block flex-center info hidden">
                 <div class="info-inner">
                     <div class="text-content">
                         <h3 class="white-text item-margin"><b>THANK YOU FOR SIGNING UP!</b></h3>
