add scrolling section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div id="content-1" class="block flex-center info">
                 <div class="info-inner">
                     <div class="text-content">
-                        <h3 class="white-text item-margin main-title"><strong>GATHERING SMALL EFFORTS FOR A GREATER PURPOSE</strong></h3>
+                        <h3 class="white-text item-margin main-title"><strong>MAKE A DIFFERENCE IN SOMEONE'S LIFE</strong></h3>
                     </div>
                     <div id="sub-content-1" class="form item-margin form-content">
                         <input id="email" class="form-control item-margin text-input block-center" type="email" name="email" required placeholder="Your email here..." id="example-text-input">
@@ -151,6 +151,120 @@
             <div class="i-m-scrollable-stuff">
                 <h2 class="pad-h-20"><strong>We're all different in the causes we care about...</strong></h2>
                 <h5>but we have the same heart to help others. We can help you to stay connected to your causes and meet other awesome people just like you!</h5>
+                <div class="credit-section">
+                        <div class="gradient-overlay">    </div>
+                    <div class="credit-wrapper">
+                        <div class="row">
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Community</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Children</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Youth</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Advocacy & Human Rights</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Disaster Relief</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Education</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Literacy</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Health</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Seniors</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Culture</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Advocacy</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Immigrants & Refugees</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Sports & Recreation</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Women</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Disabled</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Homeless</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Employment</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Faith-Based</h6>
+                                </div>
+                            </div>
+                            <div class="col-xs-4 card-wrapper">
+                                <div class="card-scroll">
+                                    <h6 class="darkgrey-text shrink-mobile">Hunger</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
