--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="section-wrapper navbar-header">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar">
-                <h1 class="orange-text logo-text">ban.tu</h1>
+                <h1 class="orange-text logo-text logo-font">ban.tu</h1>
             </div>
         </div>
         <!-- /.container -->
@@ -75,7 +75,7 @@
                     <div class="text-content">
                         <h3 class="white-text item-margin"><b>THANK YOU FOR SIGNING UP!</b></h3>
                         <h6 class="white-text item-margin">We have added you to our mailing list :)</h6>
-                        <h3 class="white-text item-margin"><b>ban.tu</b></h3>
+                        <h3 class="white-text item-margin logo-font"><b>ban.tu</b></h3>
                         <h6 class="white-text item-margin">will be launching very soon!</h6>
                     </div>
                 </div>
