--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/sweetalert.css" rel="stylesheet">
@@ -41,6 +41,8 @@
                     <div class="text-content">
                         <h3 class="white-text item-margin main-title"><strong>MAKE A DIFFERENCE IN SOMEONE'S LIFE</strong></h3>
                     </div>
+                    <br>
+                    <br>
                     <div id="sub-content-1" class="form item-margin form-content">
                         <input id="email" class="form-control item-margin text-input block-center" type="email" name="email" required placeholder="Your email here..." id="example-text-input">
                         <button type="button" id="email-button" class="btn btn-primary white-button block-center item-margin-l" onclick="onEmailClick()">NOTIFY ME</button>
@@ -95,7 +97,7 @@
                         <div class="card-top">
                             <h2 class="orange-text text-center no-margin">ban.tu</h2>
                         </div>
-                        <h6 class="darkgrey-text item-margin">
+                        <h6 class="item-margin">
                             was a name inspired by the Malay phrase “untuk membantu”, which translate as “to help”.
                         </h6>
                     </div>
@@ -105,7 +107,7 @@
                         <div class="card-top">
                             <i class="fa fa-users fa-5x orange-text" aria-hidden="true"></i>
                         </div>
-                        <h6 class="darkgrey-text item-margin">
+                        <h6 class="item-margin">
                             The ban.tu mission is simple: to bring together good work and good people who are passionately involved in the causes they champion. 
                         </h6>
                     </div>
@@ -115,7 +117,7 @@
                         <div class="card-top">
                             <i class="fa fa-link fa-5x orange-text" aria-hidden="true"></i>
                         </div>
-                        <h6 class="darkgrey-text item-margin">
+                        <h6 class="item-margin">
                             Good people should stay connected & engaged with the groups they are volunteering their time with – and we provide VWOs the platform to do so.
                         </h6>
                     </div>
@@ -123,7 +125,7 @@
             </div>
         </div>
     </section>
-    <section class="">
+    <section class="no-pad-top">
         <div class="section-wrapper">
             <div class="row item-margin second-title-wrapper">
                 <div class="col-sm-8 card-wrapper ">
@@ -150,116 +152,116 @@
         <div class="section-wrapper text-center white-text">
             <div class="i-m-scrollable-stuff">
                 <h2 class="pad-h-20"><strong>We're all different in the causes we care about...</strong></h2>
-                <h5>but we have the same heart to help others. We can help you to stay connected to your causes and meet other awesome people just like you!</h5>
+                <h6>but we have the same heart to help others. We can help you to stay <b>connected</b> to your causes and meet other awesome people just like you!</h6>
                 <div class="credit-section">
                         <div class="gradient-overlay">    </div>
                     <div class="credit-wrapper">
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Community</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Community</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Children</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Children</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Youth</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Youth</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Advocacy & Human Rights</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Advocacy & Human Rights</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Disaster Relief</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Disaster Relief</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Education</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Education</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Literacy</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Literacy</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Health</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Health</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Seniors</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Seniors</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Culture</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Culture</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Advocacy</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Advocacy</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Immigrants & Refugees</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Immigrants & Refugees</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-6 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Sports & Recreation</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Sports & Recreation</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Women</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Women</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Disabled</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Disabled</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Homeless</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Homeless</strong></h6>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Employment</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Employment</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Faith-Based</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Faith-Based</strong></h6>
                                 </div>
                             </div>
                             <div class="col-xs-4 card-wrapper">
                                 <div class="card-scroll">
-                                    <h6 class="darkgrey-text shrink-mobile">Hunger</h6>
+                                    <h6 class="dark-text shrink-mobile"><strong>Hunger</strong></h6>
                                 </div>
                             </div>
                         </div>
@@ -271,17 +273,19 @@
 
     <!-- Footer -->
     <footer>
-        <div class="section-wrapper footer-inner">
-            <div class="text-center footer-text">
-                <p class="darkgrey-text"><b>Let's get in touch</b></p>
-                <p class="darkgrey-text">Check us out here to receive news and updates</p>
+        <section>
+            <div class="section-wrapper footer-inner">
+                <div class="text-center footer-text">
+                    <p class="darkgrey-text"><b>Let's get in touch</b></p>
+                    <p class="darkgrey-text">Check us out here to receive news and updates</p>
+                </div>
+                <div class="block-center icons">
+                    <a target="_blank" href="https://www.facebook.com/bantulife" class="icon-link"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+                    <a target="_blank" href="https://medium.com/ban-tu" class="icon-link"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
+                    <a target="_blank" href="https://www.linkedin.com/company/ban.tu" class="icon-link"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                </div>
             </div>
-            <div class="block-center icons">
-                <a target="_blank" href="https://www.facebook.com/bantulife" class="icon-link"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-                <a target="_blank" href="https://medium.com/ban-tu" class="icon-link"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
-                <a target="_blank" href="https://www.linkedin.com/company/ban.tu" class="icon-link"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-            </div>
-        </div>
+        </section>
         <!-- /.container -->
     </footer>
 
